--- a/haproxy/templates/haproxy.jinja
+++ b/haproxy/templates/haproxy.jinja
@@ -58,7 +58,7 @@ defaults
 #---------------------------------------------------------------------
 {%- if 'frontends' in salt['pillar.get']('haproxy', {}) %}
   {%- for frontend in salt['pillar.get']('haproxy:frontends', {}).iteritems() %}
-frontend {{ frontend[1].name }}
+frontend {{ frontend[1].get(name, frontend[0]) }}
     bind {{ frontend[1].bind }}
     {%- if 'redirects' in frontend[1] %}
       {%- for front_redirect in frontend[1].redirects %}
@@ -90,7 +90,7 @@ redirect {{ front_redirect }}
 #---------------------------------------------------------------------
 {%- if 'backends' in salt['pillar.get']('haproxy', {}) %}
   {%- for backend in salt['pillar.get']('haproxy:backends', {}).iteritems() %} # Backend loop start
-backend {{ backend[1].name }}
+backend {{ backend[1].get(name, backend[0]) }}
   {%- if 'redirects' in backend[1] %}
     {%- for redirect in backend[1].redirects %} # Redirect loop start
 redirect {{ redirect }}{% endfor %}
@@ -117,7 +117,7 @@ redirect {{ redirect }}{% endfor %}
   {%- endif %}
   {%- if 'servers' in backend[1] %}
     {%- for server in backend[1].servers.iteritems() %}
-    server {{ server[1].name }} {{ server[1].host }}:{{ server[1].port }} {{ server[1].check }}{% endfor %}
+    server {{ server[1].get(name,server[0]) }} {{ server[1].host }}:{{ server[1].port }} {{ server[1].check }}{% endfor %}
   {% endif %}
   {% endfor %} # Backend loop end
 {% endif %}
